// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SMS Connection Request store should update store when invitation is seen 1`] = `
Object {
  "error": null,
  "isFetching": false,
  "payload": Object {
    "connReqId": "nzc5ztz",
    "senderAgencyDetail": Object {
      "DID": "BDSmVkzxRYGE4HKyMKxd1H",
      "endpoint": "52.38.32.107:80/agency/msg",
      "verKey": "6yUatReYWNSUfEtC2ABgRXmmLaxCyQqsjLwv2BomxsxD",
    },
    "senderDetail": Object {
      "DID": "3Bb6zCYMoGnMTho97HGDrn",
      "agentKeyDlgProof": Object {
        "agentDID": "EHNMj5FNjA3xBo8HUKQTZv",
        "agentDelegatedKey": "8Esrno7vguYbwVJDa31aMCdWJTu2tC7tke8u2iKUUvgB",
        "signature": "OXtzqX9LJJsBY/Mrhjff6b9L79Pdg8U4B7dI/3RR65BJr5jktAGMwpMLe1aQRQT0FlplZfNy8QtUd4KNPd+ZAg==",
      },
      "logoUrl": "http://www.evernym.com",
      "name": "default",
      "verKey": "2BzhMgbLXbECPPYiLtSEd36Boxt1oquuGJeS1ofhPoEr",
    },
    "statusCode": "MS-102",
    "statusMsg": "message sent",
    "targetName": "there",
  },
  "status": "SEEN",
}
`;

exports[`SMS Connection Request store should update store when invitation receive fail 1`] = `
Object {
  "error": Object {
    "code": "TEST-FAIL",
    "message": "Test fail message",
  },
  "isFetching": false,
  "payload": null,
  "status": "FETCH_FAILED",
}
`;

exports[`SMS Connection Request store should update store when invitation received 1`] = `
Object {
  "error": null,
  "isFetching": false,
  "payload": Object {
    "connReqId": "nzc5ztz",
    "senderAgencyDetail": Object {
      "DID": "BDSmVkzxRYGE4HKyMKxd1H",
      "endpoint": "52.38.32.107:80/agency/msg",
      "verKey": "6yUatReYWNSUfEtC2ABgRXmmLaxCyQqsjLwv2BomxsxD",
    },
    "senderDetail": Object {
      "DID": "3Bb6zCYMoGnMTho97HGDrn",
      "agentKeyDlgProof": Object {
        "agentDID": "EHNMj5FNjA3xBo8HUKQTZv",
        "agentDelegatedKey": "8Esrno7vguYbwVJDa31aMCdWJTu2tC7tke8u2iKUUvgB",
        "signature": "OXtzqX9LJJsBY/Mrhjff6b9L79Pdg8U4B7dI/3RR65BJr5jktAGMwpMLe1aQRQT0FlplZfNy8QtUd4KNPd+ZAg==",
      },
      "logoUrl": "http://www.evernym.com",
      "name": "default",
      "verKey": "2BzhMgbLXbECPPYiLtSEd36Boxt1oquuGJeS1ofhPoEr",
    },
    "statusCode": "MS-102",
    "statusMsg": "message sent",
    "targetName": "there",
  },
  "status": "RECEIVED",
}
`;

exports[`SMS Connection Request store should update store when pending invitation is requested 1`] = `
Object {
  "error": null,
  "isFetching": true,
  "payload": null,
  "status": "NONE",
}
`;
